--- a/_fonts.css
+++ b/_fonts.css
@@ -10,7 +10,27 @@
         Oher interesting fonts: Blender, Montserrat, MateriaPro, Univ 
 */
 
+@font-face {
+    font-family: "AppLight";
+    src: url("resources/fonts/Blender Pro/Blender Pro Book.ttf");
+}
 
+@font-face {
+    font-family: "AppRegular";
+    src: url("resources/fonts/Blender Pro/Blender Pro Book.ttf");
+}
+
+@font-face {
+    font-family: "AppSemiBold";
+    src: url("resources/fonts/Blender Pro/Blender Pro Book.ttf");
+}
+
+@font-face {
+    font-family:"AppExtraBold";
+    src: url("resources/fonts/Blender Pro/Blender Pro Book.ttf");
+}
+
+/*
 @font-face {
     font-family: "AppLight";
     src: url("resources/fonts/PublicSans/PublicSans Light.woff2");
@@ -34,6 +54,7 @@
     src: url("resources/fonts/PublicSans/PublicSans Extra Bold.woff2");
     font-display: auto;
 }
+*/
 
 /*
 @font-face {
